src/test/deca/context/invalid/homemade/tests/test_non_implemented/test_cast_invalid_class_cousin.deca
// test invalide de la règle cast

class A {

}

class B  extends A{

    int x = 1;
}

class C extends A{

}


{
    C b = new C();
    (B) (b);
}